@@ -1,3 +1,5 @@
+$red: #a00;
+
 @mixin border-radius($radius) {
 	-webkit-border-radius: $radius;
 	-moz-border-radius: $radius;
