@@ -203,10 +203,10 @@ foreach ( $taxonomies as $taxonomy_slug => $taxonomy ) {
 	<div class="wpmui-box closed csb-media-screen-width">
 		<h3>
 			<a href="#" class="toggle" title="<?php _e( 'Click to toggle' ); /* This is a Wordpress default language */ ?>"><br></a>
-			<span><?php _e( 'For Screen Size', 'custom-sidebars' ); ?></span>
+			<span><?php _e( 'For Screen Sizes', 'custom-sidebars' ); ?></span>
         </h3>
         <div class="inside">
-            <p class="description"><?php _e( 'Those settings do not load unload sidebars, it only hide or show widget, depend on media screen width.', 'custom-sidebars' ); ?></p>
+            <p class="description"><?php _e( 'Those settings do not load unload sidebars, it only hide or show widgets, NOT SIDEBARS, depend on media screen width.', 'custom-sidebars' ); ?></p>
             <table class="form-table">
                 <thead>
                     <tr>
@@ -219,10 +219,10 @@ foreach ( $taxonomies as $taxonomy_slug => $taxonomy ) {
                 <tbody>
                 </tbody>
                 <tfoot>
-                    <tr><td colspan="3"><?php esc_html_e( 'There is no defined rules.', 'custom-sidebars' ); ?></td></tr>
+                    <tr><td colspan="3"><div class="notice notice-info inline"><p><?php esc_html_e( 'There is no defined rules.', 'custom-sidebars' ); ?></p></div></td></tr>
                 </tfoot>
             </table>
-            <button class="btn-add-rule"><?php esc_html_e( 'Add new rule', 'custom-sidebars' ); ?></button>
+            <button class="button btn-add-rule"><?php esc_html_e( 'Add new rule', 'custom-sidebars' ); ?></button>
         </div>
     </div>
 
